Changed sky and seeing limits, made universal only gri

--- a/survey/Universal.conf
+++ b/survey/Universal.conf
@@ -48,15 +48,15 @@ RestartCompleteSequences = True
 
 # Visits requirements for a 1 year survey. Adjust proportionally to the right survey length.
 
-SubSeqName      = u
-SubSeqFilters   = u
-SubSeqExposures = 1
-SubSeqEvents	= 113
-SubSeqMaxMissed = 0
-SubSeqInterval  = 0
-SubSeqWindowStart       = 0
-SubSeqWindowMax         = 0
-SubSeqWindowEnd         = 0
+#SubSeqName      = u
+#SubSeqFilters   = u
+#SubSeqExposures = 1
+#SubSeqEvents	= 113
+#SubSeqMaxMissed = 0
+#SubSeqInterval  = 0
+#SubSeqWindowStart       = 0
+#SubSeqWindowMax         = 0
+#SubSeqWindowEnd         = 0
                                                                                                           
 SubSeqName      = g
 SubSeqFilters   = g
@@ -88,25 +88,25 @@ SubSeqWindowStart       = -0.5
 SubSeqWindowMax         =  0.5
 SubSeqWindowEnd         =  1.0
                                                                                                       
-SubSeqName      = z
-SubSeqFilters   = z
-SubSeqExposures = 1
-SubSeqEvents    = 315
-SubSeqMaxMissed = 0
-SubSeqInterval  = 30*60
-SubSeqWindowStart       = -0.5
-SubSeqWindowMax         =  0.5
-SubSeqWindowEnd         =  1.0
+#SubSeqName      = z
+#SubSeqFilters   = z
+#SubSeqExposures = 1
+#SubSeqEvents    = 315
+#SubSeqMaxMissed = 0
+#SubSeqInterval  = 30*60
+#SubSeqWindowStart       = -0.5
+#SubSeqWindowMax         =  0.5
+#SubSeqWindowEnd         =  1.0
 
-SubSeqName      = y
-SubSeqFilters   = y
-SubSeqExposures = 1
-SubSeqEvents	= 315
-SubSeqMaxMissed = 0
-SubSeqInterval  = 0
-SubSeqWindowStart       = 0
-SubSeqWindowMax         = 0
-SubSeqWindowEnd         = 0
+#SubSeqName      = y
+#SubSeqFilters   = y
+#SubSeqExposures = 1
+#SubSeqEvents	= 315
+#SubSeqMaxMissed = 0
+#SubSeqInterval  = 0
+#SubSeqWindowStart       = 0
+#SubSeqWindowMax         = 0
+#SubSeqWindowEnd         = 0
 
 #   Initial value for needed visits after completing the requested visits
 #       for that field-filter. Need starts at this value decaying when
@@ -182,19 +182,19 @@ Filter_MaxBrig = 30.00
 Filter_MaxSeeing= 1.5
                                                                                                           
 Filter = g
-Filter_MinBrig = 21.00
+Filter_MinBrig = 17.00
 Filter_MaxBrig = 30.00
-Filter_MaxSeeing= 1.5
+Filter_MaxSeeing= 2.0
 
 Filter = r
-Filter_MinBrig = 20.25
+Filter_MinBrig = 17.0
 Filter_MaxBrig = 30.00
-Filter_MaxSeeing= 1.5
+Filter_MaxSeeing= 2.2
 
 Filter = i
-Filter_MinBrig = 19.50
+Filter_MinBrig = 16.0
 Filter_MaxBrig = 30.00
-Filter_MaxSeeing= 1.5
+Filter_MaxSeeing= 2.5
 
 Filter = z
 Filter_MinBrig = 17.00
@@ -208,7 +208,7 @@ Filter_MaxSeeing= 1.5
 
 #   Default max airmass adjusted seeing if specific filter not provided
 #       Units: arcseconds  Format: float   Default: none
-MaxSeeing    = 1.5
+MaxSeeing    = 2.5
                                                                                              
 #   Minimum Cloud Transparency of allowable observations
 #       Units = range 0:1; Format = float; Default is .9, Hardcoded limit =.9
