--- a/survey/LSST.conf
+++ b/survey/LSST.conf
@@ -4,7 +4,7 @@
 
 #       Number of years to simulate.
 #       Units = year; Format = float; Default = 1 year
-nRun = 9.0
+nRun = 10.0
 
 #       Days relative to seeingEpoch from which simulation commences
 #       Units = MJD;    Format = float; Default == 0.0
@@ -53,15 +53,15 @@ siteConf = system/SiteCP.conf
 
 #        Weak Lensing Proposal configuration file
 #        If missing, then do not process Weak Lensing proposal
-#weakLensConf = survey/GalacticPlaneProp.conf
-#weakLensConf = survey/SouthCelestialPole.conf
+weakLensConf = survey/GalacticPlaneProp.conf
+weakLensConf = survey/SouthCelestialPole.conf
 
 #        New Weak Lensing as Transient with subsequences for each filter.
 WLpropConf = survey/Universal_N.conf
 WLpropConf = survey/Universal_M.conf
 WLpropConf = survey/Universal_S.conf
-#WLpropConf = survey/NorthEclipticSpur.conf
-#WLpropConf = survey/DDcosmology.conf
+WLpropConf = survey/NorthEclipticSpur.conf
+WLpropConf = survey/DDcosmology.conf
 
 #       Instrument configuration file
 instrumentConf = system/Instrument.conf
