Added files to make full sky yr 1 + 10, N/M/S for 8/9 of a year 3x in between

--- a/survey/LSST.conf
+++ b/survey/LSST.conf
@@ -4,7 +4,7 @@
 
 #       Number of years to simulate.
 #       Units = year; Format = float; Default = 1 year
-nRun = 9.0
+nRun = 10.0
 
 #       Days relative to seeingEpoch from which simulation commences
 #       Units = MJD;    Format = float; Default == 0.0
@@ -53,15 +53,23 @@ siteConf = system/SiteCP.conf
 
 #        Weak Lensing Proposal configuration file
 #        If missing, then do not process Weak Lensing proposal
-#weakLensConf = survey/GalacticPlaneProp.conf
-#weakLensConf = survey/SouthCelestialPole.conf
+weakLensConf = survey/GalacticPlaneProp.conf
+weakLensConf = survey/SouthCelestialPole.conf
 
 #        New Weak Lensing as Transient with subsequences for each filter.
-WLpropConf = survey/Universal_N.conf
-WLpropConf = survey/Universal_M.conf
-WLpropConf = survey/Universal_S.conf
-#WLpropConf = survey/NorthEclipticSpur.conf
-#WLpropConf = survey/DDcosmology.conf
+WLpropConf = survey/Universal_0.conf
+WLpropConf = survey/Universal_N_1.conf
+WLpropConf = survey/Universal_M_2.conf
+WLpropConf = survey/Universal_S_3.conf
+WLpropConf = survey/Universal_N_4.conf
+WLpropConf = survey/Universal_M_5.conf
+WLpropConf = survey/Universal_S_6.conf
+WLpropConf = survey/Universal_N_7.conf
+WLpropConf = survey/Universal_M_8.conf
+WLpropConf = survey/Universal_S_9.conf
+WLpropConf = survey/Universal_10.conf
+WLpropConf = survey/NorthEclipticSpur.conf
+WLpropConf = survey/DDcosmology.conf
 
 #       Instrument configuration file
 instrumentConf = system/Instrument.conf
