Remaking LSST.conf for this case

--- a/survey/LSST.conf
+++ b/survey/LSST.conf
@@ -58,16 +58,25 @@ weakLensConf = survey/SouthCelestialPole.conf
 
 #        New Weak Lensing as Transient with subsequences for each filter.
 WLpropConf = survey/Universal_0.conf
-WLpropConf = survey/Universal_N_1.conf
-WLpropConf = survey/Universal_M_2.conf
-WLpropConf = survey/Universal_S_3.conf
-WLpropConf = survey/Universal_N_4.conf
-WLpropConf = survey/Universal_M_5.conf
-WLpropConf = survey/Universal_S_6.conf
-WLpropConf = survey/Universal_N_7.conf
-WLpropConf = survey/Universal_M_8.conf
-WLpropConf = survey/Universal_S_9.conf
-WLpropConf = survey/Universal_10.conf
+WLpropConf = survey/Universal_NR_1.conf
+WLpropConf = survey/Universal_NB_23.conf
+WLpropConf = survey/Universal_NR_4.conf
+WLpropConf = survey/Universal_NB_56.conf
+WLpropConf = survey/Universal_NR_7.conf
+WLpropConf = survey/Universal_NB_89.conf
+WLpropConf = survey/Universal_MB_1.conf
+WLpropConf = survey/Universal_MR_2.conf
+WLpropConf = survey/Universal_MB_34.conf
+WLpropConf = survey/Universal_MR_5.conf
+WLpropConf = survey/Universal_MB_67.conf
+WLpropConf = survey/Universal_MR_8.conf
+WLpropConf = survey/Universal_MB_9.conf
+WLpropConf = survey/Universal_SB_12.conf
+WLpropConf = survey/Universal_SR_3.conf
+WLpropConf = survey/Universal_SB_45.conf
+WLpropConf = survey/Universal_SR_6.conf
+WLpropConf = survey/Universal_SB_78.conf
+WLpropConf = survey/Universal_SR_9.conf
 WLpropConf = survey/NorthEclipticSpur.conf
 WLpropConf = survey/DDcosmology.conf
 
