First run with two underlying sequences 	modified:   LSST.conf 	new file:   Universal_0_copy.conf 	modified:   Universal_10.conf 	renamed:    Universal_M_2.conf -> Universal_M_B_1.conf

--- a/survey/Universal_M_B_67.conf
+++ b/survey/Universal_M_B_67.conf
@@ -48,10 +48,11 @@ RestartCompleteSequences = True
 
 # Visits requirements for a 1 year survey. Adjust proportionally to the right survey length.
 
+
 SubSeqName      = u
 SubSeqFilters   = u
 SubSeqExposures = 1
-SubSeqEvents	= 15
+SubSeqEvents	= 3
 SubSeqMaxMissed = 0
 SubSeqInterval  = 0
 SubSeqWindowStart       = 0
@@ -61,7 +62,7 @@ SubSeqWindowEnd         = 0
 SubSeqName      = g
 SubSeqFilters   = g
 SubSeqExposures = 1
-SubSeqEvents	= 21
+SubSeqEvents	= 4
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -71,7 +72,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = r
 SubSeqFilters   = r
 SubSeqExposures = 1
-SubSeqEvents	= 48
+SubSeqEvents	= 10
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -81,7 +82,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = i
 SubSeqFilters   = i
 SubSeqExposures = 1
-SubSeqEvents	= 48
+SubSeqEvents	= 10
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -91,7 +92,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = z
 SubSeqFilters   = z
 SubSeqExposures = 1
-SubSeqEvents    = 42
+SubSeqEvents    = 9
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -101,13 +102,12 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = y
 SubSeqFilters   = y
 SubSeqExposures = 1
-SubSeqEvents	= 42
+SubSeqEvents	= 9
 SubSeqMaxMissed = 0
 SubSeqInterval  = 0
 SubSeqWindowStart       = 0
 SubSeqWindowMax         = 0
 SubSeqWindowEnd         = 0
-
 #   Initial value for needed visits after completing the requested visits
 #       for that field-filter. Need starts at this value decaying when
 #       getting additional visits.
@@ -266,8 +266,8 @@ AcceptConsecutiveObs = False
 
 # Set start and stop time if proposal should not run for the entire simulation
 # duration (secs since start of simulation).
-StartTime = 59568000.
-StopTime = 87600000.
+StartTime = 189216000.0
+StopTime = 252288000.0 
 
 # ----------------------------------------------------------------------
 #                       Field Selection Parameters
