--- a/survey/Universal_first.conf
+++ b/survey/Universal_first.conf
@@ -51,7 +51,7 @@ RestartCompleteSequences = True
 SubSeqName      = u
 SubSeqFilters   = u
 SubSeqExposures = 1
-SubSeqEvents	= 15
+SubSeqEvents	= 75
 SubSeqMaxMissed = 0
 SubSeqInterval  = 0
 SubSeqWindowStart       = 0
@@ -61,7 +61,7 @@ SubSeqWindowEnd         = 0
 SubSeqName      = g
 SubSeqFilters   = g
 SubSeqExposures = 1
-SubSeqEvents	= 21
+SubSeqEvents	= 105
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -71,7 +71,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = r
 SubSeqFilters   = r
 SubSeqExposures = 1
-SubSeqEvents	= 48
+SubSeqEvents	= 240
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -81,7 +81,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = i
 SubSeqFilters   = i
 SubSeqExposures = 1
-SubSeqEvents	= 48
+SubSeqEvents	= 240
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -91,7 +91,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = z
 SubSeqFilters   = z
 SubSeqExposures = 1
-SubSeqEvents    = 42
+SubSeqEvents    = 210
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -101,7 +101,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = y
 SubSeqFilters   = y
 SubSeqExposures = 1
-SubSeqEvents	= 42
+SubSeqEvents	= 210
 SubSeqMaxMissed = 0
 SubSeqInterval  = 0
 SubSeqWindowStart       = 0
@@ -266,8 +266,8 @@ AcceptConsecutiveObs = False
 
 # Set start and stop time if proposal should not run for the entire simulation
 # duration (secs since start of simulation).
-StartTime = 
-StopTime = .
+StartTime = 0.
+StopTime = 31536000.0
 
 # ----------------------------------------------------------------------
 #                       Field Selection Parameters
