--- a/survey/Universal_S_R_6.conf
+++ b/survey/Universal_S_R_6.conf
@@ -51,7 +51,7 @@ RestartCompleteSequences = True
 SubSeqName      = u
 SubSeqFilters   = u
 SubSeqExposures = 1
-SubSeqEvents	= 15
+SubSeqEvents	= 19
 SubSeqMaxMissed = 0
 SubSeqInterval  = 0
 SubSeqWindowStart       = 0
@@ -61,7 +61,7 @@ SubSeqWindowEnd         = 0
 SubSeqName      = g
 SubSeqFilters   = g
 SubSeqExposures = 1
-SubSeqEvents	= 21
+SubSeqEvents	= 27
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -71,7 +71,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = r
 SubSeqFilters   = r
 SubSeqExposures = 1
-SubSeqEvents	= 48
+SubSeqEvents	= 62
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -81,7 +81,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = i
 SubSeqFilters   = i
 SubSeqExposures = 1
-SubSeqEvents	= 48
+SubSeqEvents	= 62
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -91,7 +91,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = z
 SubSeqFilters   = z
 SubSeqExposures = 1
-SubSeqEvents    = 42
+SubSeqEvents    = 54
 SubSeqMaxMissed = 0
 SubSeqInterval  = 30*60
 SubSeqWindowStart       = -0.5
@@ -101,7 +101,7 @@ SubSeqWindowEnd         =  1.0
 SubSeqName      = y
 SubSeqFilters   = y
 SubSeqExposures = 1
-SubSeqEvents	= 42
+SubSeqEvents	= 54
 SubSeqMaxMissed = 0
 SubSeqInterval  = 0
 SubSeqWindowStart       = 0
@@ -266,8 +266,8 @@ AcceptConsecutiveObs = False
 
 # Set start and stop time if proposal should not run for the entire simulation
 # duration (secs since start of simulation).
-StartTime = 171696000.
-StopTime = 199728000.
+StartTime = 189216000.0
+StopTime = 220752000.0
 
 # ----------------------------------------------------------------------
 #                       Field Selection Parameters
