--- a/survey/Universal_all.conf
+++ b/survey/Universal_all.conf
@@ -266,8 +266,8 @@ AcceptConsecutiveObs = False
 
 # Set start and stop time if proposal should not run for the entire simulation
 # duration (secs since start of simulation).
-StartTime = 
-StopTime = .
+StartTime = 0
+StopTime = 31536000
 
 # ----------------------------------------------------------------------
 #                       Field Selection Parameters
