--- a/survey/Universal_S_B_45.conf
+++ b/survey/Universal_S_B_45.conf
@@ -23,7 +23,7 @@ RestartLostSequences = True
                                                                                           
 #   Indicates successfully completed sequences may be restarted on completion.
 #       Default = False
-RestartCompleteSequences = True
+RestartCompleteSequences = False
                                                                                           
 # Configuration for each filter-subsequence
 #MasterSubSequence = r
@@ -128,7 +128,7 @@ OverflowLevel = 0.0
 # after 70% progress
 ProgressToStartBoost = 0.90
 # double rank near the end compared to a non-observed field-filter
-MaxBoostToComplete   = 10.00
+MaxBoostToComplete   = 0.00
 
 # Galactic plane exclusion zone
 #       During a night, the EXCLUDED fields are bracketted by
